Add GitHub Pages deployment

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https//prosperioe.github.io/soe-survey",
-  "name": "my-sql-project",
+  "name": "my-survey-project",
   "version": "0.1.0",
   "private": true,
   "scripts": {
