--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "homepage": "https//prosperioe.github.io/soe-survey",
+  "homepage": "https//prosperioe/github.io/soe-survey",
   "name": "my-survey-project",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
@@ -60,6 +60,7 @@
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^1.1.2",
     "zod": "3.25.67"
   },
   "devDependencies": {
